--- a/src/src/LaunchScreen.storyboard
+++ b/src/src/LaunchScreen.storyboard
@@ -18,19 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="GbV-k8-Sml">
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_icon" translatesAutoresizingMaskIntoConstraints="NO" id="tA8-DS-13x">
                                 <rect key="frame" x="137.5" y="283.5" width="100" height="100"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="GbV-k8-Sml" secondAttribute="height" multiplier="1:1" id="R6p-Mg-QEW"/>
-                                    <constraint firstAttribute="width" constant="100" id="ZiL-Gh-kAh"/>
+                                    <constraint firstAttribute="width" constant="100" id="WRf-8w-SyY"/>
+                                    <constraint firstAttribute="height" constant="100" id="l2L-jU-zTC"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.21176470588235294" green="0.22745098039215686" blue="0.23921568627450979" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="GbV-k8-Sml" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="0il-fr-y9N"/>
-                            <constraint firstItem="GbV-k8-Sml" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="U61-mi-bTt"/>
+                            <constraint firstItem="tA8-DS-13x" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4Bx-W2-6J7"/>
+                            <constraint firstItem="tA8-DS-13x" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Zyy-Hb-gH3"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -41,6 +41,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon" width="1024" height="1024"/>
+        <image name="app_icon" width="1024" height="1024"/>
     </resources>
 </document>
