--- a/src/src/Main.storyboard
+++ b/src/src/Main.storyboard
@@ -164,9 +164,6 @@
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
-                                                    <connections>
-                                                        <action selector="noteSet:" destination="G5g-Zr-OgS" eventType="editingDidEnd" id="wPc-VU-URY"/>
-                                                    </connections>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -195,9 +192,6 @@
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
-                                                    <connections>
-                                                        <action selector="lunchSet:" destination="G5g-Zr-OgS" eventType="editingDidEnd" id="GJW-mY-I6n"/>
-                                                    </connections>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -226,9 +220,6 @@
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
-                                                    <connections>
-                                                        <action selector="STPressed:" destination="G5g-Zr-OgS" eventType="editingDidBegin" id="0UJ-uu-R9Y"/>
-                                                    </connections>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -257,9 +248,6 @@
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
-                                                    <connections>
-                                                        <action selector="ETPressed:" destination="G5g-Zr-OgS" eventType="editingDidBegin" id="jXg-1X-kaa"/>
-                                                    </connections>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -350,9 +338,6 @@
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
-                                                    <connections>
-                                                        <action selector="minHoursSet:" destination="G5g-Zr-OgS" eventType="editingDidEnd" id="DgJ-pb-Wdd"/>
-                                                    </connections>
                                                 </textField>
                                             </subviews>
                                             <constraints>
@@ -555,11 +540,11 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="accessoryLbl" destination="2un-Ah-TBY" id="gve-FX-txl"/>
                                             <outlet property="dateLbl" destination="H1b-2F-b8g" id="7Jk-GV-8zb"/>
-                                            <outlet property="lunchLbl" destination="eoN-4a-nhk" id="WkY-VD-l7m"/>
-                                            <outlet property="noteLbl" destination="s6f-hT-FZo" id="qaB-zq-Q3m"/>
-                                            <outlet property="timeLbl" destination="BFV-RI-hwI" id="l01-pm-4yp"/>
+                                            <outlet property="duration" destination="BFV-RI-hwI" id="XBs-JQ-kce"/>
+                                            <outlet property="lunch" destination="eoN-4a-nhk" id="Q14-Z5-jOu"/>
+                                            <outlet property="title" destination="s6f-hT-FZo" id="2Q1-3n-XUM"/>
+                                            <outlet property="worktime" destination="2un-Ah-TBY" id="Rct-N4-Lhn"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -724,8 +709,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Calculator" width="50" height="50"/>
-        <image name="journal" width="45" height="45"/>
-        <image name="settings" width="75" height="75"/>
+        <image name="Calculator" width="48" height="48"/>
+        <image name="journal" width="37.5" height="37.5"/>
+        <image name="settings" width="37.5" height="37.5"/>
     </resources>
 </document>
